<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.max.notificacionesfcmbis.ui.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_checklists"
        android:name="com.max.notificacionesfcmbis.ui.ChecklistsFragment"
        android:label="@string/menu_checklists"
        tools:layout="@layout/fragment_checklists" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.max.notificacionesfcmbis.ui.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>
